kubernetes/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlp-flask-server
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nlp-flask-server
  template:
    metadata:
      labels:
        app: nlp-flask-server
    spec:
      containers:
        - name: api
          image: ghcr.io/logora/logora-nlp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128M"
              cpu: "200m"
              ephemeral-storage: "2Gi"
            limits:
              memory: "512M"
              cpu: "500m"
              ephemeral-storage: "3Gi"
          livenessProbe:
            httpGet:
              port: 1789
            initialDelaySeconds: 90
            periodSeconds: 5
