kubernetes/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nlp-flask-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.tricoteuses.fr
      secretName: app-tricoteuses-fr
  rules:
    - host: app.tricoteuses.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tricoteuses-api
                port:
                  number: 1789
